--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <button type="submit">Log In</button>
                 <a href="#">Forgot account?</a>
                 <button class="create-account">Create New Account</button>
+            </form>
         </div>
         <footer>
             <a href="#">Create a Page</a> for a celebrity, brand or business.
